name:    Xyz
version: X.Y.Z

category: Xyz

synopsis: Xyz
description:
  Xyz
  .
  Xyz

author:     Xyz Xyz <xyz@xyz.xyz>
maintainer: Xyz Xyz <xyz@xyz.xyz>

license:      BSD3
license-file: LICENSE

homepage: http://xyz.xyz.xyz

-- -- -- -- -- -- -- -- -- --

cabal-version: >= 1.6
build-type:    Simple

-- -- -- -- -- -- -- -- -- --

library
  hs-source-dirs:
    src

  exposed-modules:
    A.B.C
    X.Y.Z

  build-depends:
    base       == 4.*,
    containers == 0.2.*

  ghc-options: -Wall
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

-- -- -- -- -- -- -- -- -- --

source-repository head
  type:     git
  location: git://xyz.xyz.xyz
